--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,14 @@
 
     <groupId>com.torocloud</groupId>
     <artifactId>mock-contact-api</artifactId>
-    <version>1.0</version>
+    <version>1.0.0</version>
 
     <name>Mock Contact API</name>
     <description>Builds a Martini package containing a mock contact API.</description>
+
+    <properties>
+        <rootDir>${basedir}</rootDir>
+    </properties>
 
     <build>
         <plugins>
@@ -19,12 +23,34 @@
                 <configuration>
                     <descriptor>src/main/assembly/bin.xml</descriptor>
                     <finalName>${project.artifactId}</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <target>
+                                <ant antfile="${rootDir}/src/main/assembly/build.xml">
+                                    <property name="currentVersion" value="${project.version}"/>
+                                    <property name="targetDir" value="${pom.basedir}"/>
+                                    <target name="embed.version"/>
+                                </ant>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
                         </goals>
                     </execution>
                 </executions>
